--- a/facts.html
+++ b/facts.html
@@ -29,6 +29,10 @@
             line-height: 1.5;
         }
 
+        article {
+            line-height: 1.5;
+        }
+
         nav {
             background-color: #ffccdd;
             color: rgb(175, 9, 87);
@@ -83,7 +87,7 @@
 
 
     <header>
-        <h1 style="padding-left:10%;">ИСТОРИЯ СОЗДАНИЯ</h1>
+        <h1 style="padding-left:10%;">ИНТЕРЕСНЫЕ ФАКТЫ О HELLO KITTY</h1>
         <nav>
             <a href="index.html">ГЛАВНАЯ</a>
             <a href="facts.html">ИНТЕРЕСНЫЕ ФАКТЫ</a>
@@ -93,48 +97,55 @@
     <main>
         <article>
             <section>
-                <h2>О персонаже</h2>
-                <p>Hello Kitty — японский персонаж, созданный компанией <a href="https://ru.wikipedia.org/wiki/Sanrio"
-                        target="_blank">Sanrio</a> в 1974 году.
-                    Она стала мировым символом дружбы, доброты и милоты.</p>
-                <p>Персонаж часто появляется на игрушках, одежде, аксессуарах и даже в мультфильмах.</p>
+                <h2>Факты</h2>
+                <p>Вот несколько любопытных фактов о <a href="https://ru.wikipedia.org/wiki/Hello_Kitty"
+                        target="_blank">Hello Kitty</a>:</p>
+                <ul>
+                    <li>Она не кошка, а девочка по имени Китти Уайт.</li>
+                    <li>У неё есть сестра-близнец по имени Мимми.</li>
+                    <li>Hello Kitty популярна во всем мире и является иконой поп-культуры.</li>
+                </ul>
 
-                <aside>
-                    <p> Первый товар с изображением Hello Kitty появился в 1974 году —
-                        это был небольшой виниловый кошелёк. Неожиданно он стал хитом продаж и положил
-                        начало мировой популярности персонажа. С этого момента Hello Kitty превратилась
-                        в один из самых узнаваемых символов японской культуры.
-                    </p>
-                </aside>
+                <p>А вот список стран, где Hello Kitty особенно любима:</p>
+
+                <ol>
+                    <li>Япония</li>
+                    <li>США</li>
+                    <li>Китай</li>
+                    <li>Россия</li>
+                </ol>
 
                 <figure>
-                    <a href="https://ru.pinterest.com/pin/171277592073345262/" target="_blank">
-                        <img src="https://i.pinimg.com/736x/05/0a/15/050a15ae7b79d3b43ac21f5bb5d56914.jpg" width="400"
+                    <a href="https://ru.pinterest.com/pin/299700550221414061/" target="_blank">
+                        <img src="https://i.pinimg.com/736x/c0/e7/df/c0e7dff752c18b8341105bcfd96d622e.jpg" width="400"
                             alt="Hello Kitty">
                     </a>
-                    <figcaption>Классический образ Hello Kitty</figcaption>
+                    <figcaption>Hello Kitty</figcaption>
                 </figure>
             </section>
         </article>
 
-        <section>
-            <p>Как известно, у японцев существует множество традиций, и одна из них – преподносить
-                друг другу небольшие подарки, симпатичные мелочи. В 1960 году Синтаро открыл собственную фирму
-                по продаже подобных игрушек и сувениров, которые не были дорогими, но непременно создавали хорошее
-                настроение. У компании Sanrio (так называлась фирма Синтаро Цудзи) был и соответствующий девиз:
-                «Маленький подарок – большая улыбка». До Sanrio рынок подарков в Японии был довольно скудным. Кроме
-                того,
-                Цудзи первым ввел в продажу мягкие игрушки в виде зверушек и начал выпускать игрушки специально для
-                девочек.</p>
+        <aside>
+            <p>у Hello Kitty нет рта. Это сделано специально,
+                чтобы каждый человек мог проецировать на неё свои эмоции — радость, грусть или удивление.
+            </p>
+        </aside>
 
-            <figure>
-                <img src="image/pic2.jpg" width="400" alt="Hello Kitty">
-                <figcaption>Hello Kitty с бантиком</figcaption>
-            </figure>
+        <section>
+            <p>История компании Sanrio началась с идеи дарить людям радость через простые вещи.
+                С тех пор Hello Kitty стала не просто персонажем, а символом дружбы, счастья и тепла,
+                который объединяет миллионы людей по всему миру.</p>
         </section>
 
-
-
+        <section>
+            <figure>
+                <a href="https://ru.pinterest.com/pin/72057662781404234/" target="_blank">
+                    <img src="https://i.pinimg.com/1200x/aa/a9/27/aaa9279263fafb62591e656bf18e6c84.jpg" width="400"
+                        alt="Hello Kitty">
+                </a>
+                <figcaption>Образ Hello Kitty</figcaption>
+            </figure>
+        </section>
     </main>
 
     <footer>
