--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
     <title>Hello Kitty</title>
-</head>
 
-<body>
     <style>
         body {
             background-color: #ffe6f0;
@@ -79,6 +77,10 @@
             font-size: 14px;
         }
     </style>
+</head>
+
+<body>
+
 
     <header>
         <h1 style="padding-left:10%;">ИСТОРИЯ СОЗДАНИЯ</h1>
@@ -89,18 +91,20 @@
     </header>
 
     <main>
-        <section>
-            <article>
+        <article>
+            <section>
                 <h2>О персонаже</h2>
-                <p>Hello Kitty — японский персонаж, созданный компанией <a href="https://ru.wikipedia.org/wiki/Sanrio" target="_blank">Sanrio</a> в 1974 году.
+                <p>Hello Kitty — японский персонаж, созданный компанией <a href="https://ru.wikipedia.org/wiki/Sanrio"
+                        target="_blank">Sanrio</a> в 1974 году.
                     Она стала мировым символом дружбы, доброты и милоты.</p>
                 <p>Персонаж часто появляется на игрушках, одежде, аксессуарах и даже в мультфильмах.</p>
 
                 <aside>
-                    Первый товар с изображением Hello Kitty появился в 1974 году —
-                    это был небольшой виниловый кошелёк. Неожиданно он стал хитом продаж и положил
-                    начало мировой популярности персонажа. С этого момента Hello Kitty превратилась
-                    в один из самых узнаваемых символов японской культуры.
+                    <p> Первый товар с изображением Hello Kitty появился в 1974 году —
+                        это был небольшой виниловый кошелёк. Неожиданно он стал хитом продаж и положил
+                        начало мировой популярности персонажа. С этого момента Hello Kitty превратилась
+                        в один из самых узнаваемых символов японской культуры.
+                    </p>
                 </aside>
 
                 <figure>
@@ -110,8 +114,8 @@
                     </a>
                     <figcaption>Классический образ Hello Kitty</figcaption>
                 </figure>
-            </article>
-        </section>
+            </section>
+        </article>
 
         <section>
             <p>Как известно, у японцев существует множество традиций, и одна из них – преподносить
@@ -129,7 +133,7 @@
             </figure>
         </section>
 
-        
+
 
     </main>
 
